white space in the right side correction

--- a/frontend/src/components/layout/styles.scss
+++ b/frontend/src/components/layout/styles.scss
@@ -18,10 +18,9 @@
 .layout-body{
     position: absolute;
     background-color: #ffffff;
-    width: 100vw;
     top:12.4rem;
     border-radius: 6rem 6rem 0rem 0rem;
     min-height: 100vh;
-    padding: 5.5rem 10.5rem;
-    
+    padding: 5.5rem;
+
 }
